--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "eslint": "^8.55.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.1.0",
     "typescript": "^5.1.3"
   },
   "private": true
